--- a/deal_count.html
+++ b/deal_count.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>根据表格生成sql</title>
+		<title>根据批号统计数量</title>
 		<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 	</head>
 	<body>
