--- a/openDoor.html
+++ b/openDoor.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title></title>
+		<title>开门</title>
 		<script src="https://cdn.bootcss.com/jquery/3.4.1/jquery.min.js"></script>
 	</head>
 	<body>
